splitmuxsink: Video files made when using matroskamux as the muxer cannot seek properly
Submitted by Ervin
Link to original bug (#794105)
Description
Subsequent files generated after the first when using the following pipeline are unable to seek correctly on players such as Films & TV on Windows 10. (VLC however was able to seek correctly.)
gst-launch-1.0 rtspsrc location=rtsp://xxx.xxx.xxx.xxx:xxxx/file1 ! queue ! rtph264depay ! h264parse config-interval=-1 ! splitmuxsink muxer=matroskamux max-size-time=60000000000 location=C:/tmp/file_%d.mkv
When seeking incorrectly, the duration would appear as the time since the pipeline started over the file interval, such as 1:00/0:59 for the second file and 2:00/0:59 for the third and so on.
This issue does not appear on the default muxer (mp4muxer) however.
Version: 1.x